# QM_sim

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.html  contribution.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  usage.html
.doctrees/: api.doctree  contribution.doctree  environment.pickle  index.doctree  usage.doctree
.github/workflows/: build_dev_docs.yml  build_docs.yml  build_package.yml  linting.yml
_modules/: index.html
_modules/qm_sim/: eigensolvers.html  plot.html  spatial_derivative.html
_modules/qm_sim/eigensolvers/: scipy_eigen.html
_modules/qm_sim/temporal_solver/: base.html  crank_nicolson.html  leapfrog.html  scipy_solvers.html
_sources/: contribution.rst.txt  index.rst.txt  usage.rst.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  usage.rst
examples/: 01_zero_potential.py  02_quadratic_potential.py  03_2D_potential.py  04_adiabatic_evolution.py  05_temporal_evolution.py  06_2D_temporal_evolution.py  07_hydrogen_atom.py
examples/stationary/: 2D_potential.py  quadratic_potential.py
src/qm_sim/: discretization.py  finite_difference.py  hamiltonian.py  nature_constants.py  plot.py  temporal_evolution.py
src/qm_sim/cpp/: __init__.py
src/qm_sim/cpp/eigen/: CMakeLists.txt  __init__.py
src/qm_sim/cpp/eigen/include/: HamiltonianBase.hpp  eigensolver.hpp
src/qm_sim/cpp/eigen/scripts/: generate_init.py
src/qm_sim/cpp/eigen/src/: HamiltonianBase.cpp  eigensolver.cpp
src/qm_sim/cpp/eigen/wrapper/: CMakeLists.txt  py_interface.cpp
src/qm_sim/eigensolvers/: __init__.py  pytorch_eigen.py  scipy_eigen.py
src/qm_sim/hamiltonian/: __init__.py  eigensolvers.py  eigsh.py  hamiltonian.py  plot.py  pytorch_eigen.py  pytorch_eigsh.py  scipy_eigen.py  scipy_eigsh.py  spatial_hamiltonian.py
src/qm_sim/hamiltonian/spatial_derivative/: __init__.py  cartesian.py
src/qm_sim/hamiltonian/temporal_derivative/: RK45.py  __init__.py  base.py  crank_nicolson.py  leapfrog.py  scipy_solvers.py
src/qm_sim/hamiltonian/temporal_solver/: base.py  crank_nicolson.py  leapfrog.py  scipy_solvers.py
src/qm_sim/spatial_derivative/: __init__.py  cartesian.py
src/qm_sim/temporal_hamiltonian/: __init__.py  base.py  crank_nicolson.py  leapfrog.py
src/qm_sim/temporal_solver/: __init__.py  base.py  crank_nicolson.py  leapfrog.py  scipy_solvers.py
tests/: test_hamiltonian.py
tests/test_eigensolvers/: __init__.py  scipy_backend.py  test_eigensolvers.py
