[project]
name = "qm_sim"
version = "0.0.1"
authors = [
  { name="Viljar Femoen", email="author@example.com" },
]
description = "Quantum mechanics simulation library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/viljarjf/QM_sim"
"Bug Tracker" = "https://github.com/viljarjf/QM_sim/issues"
"Source" = "https://github.com/viljarjf/QM_sim"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"