[project]
name = "qm_sim"
version = "0.0.2"
authors = [
  { name="Viljar Femoen", email="author@example.com" },
]
description = "Quantum mechanics simulation library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "tqdm>=4.64.1"
]

[project.urls]
"Homepage" = "https://github.com/viljarjf/QM_sim"
"Bug Tracker" = "https://github.com/viljarjf/QM_sim/issues"
"Source" = "https://github.com/viljarjf/QM_sim"

[project.optional-dependencies]
test = ["pytest", "matplotlib"]
torch = ["torch"]

[build-system]
requires = [
    "setuptools",
    "scikit-build-core", 
    "pybind11",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-raP"
